php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #72523 dtrace issue with reflection (failed test)
Submitted: 2016-06-30 11:03 UTC Modified: 2016-07-01 10:49 UTC
From: remi@php.net Assigned:
Status: Closed Package: *General Issues
PHP Version: 7.1Git-2016-06-30 (Git) OS: GNU/Linux
Private report: No CVE-ID: None
 [2016-06-30 11:03 UTC] remi@php.net
Description:
------------
When dtrace is enabled, 1 test fails



Test script:
---------------
With ./configure --disable-all --enable-dtrace
make testTESTS=ext/reflection/


Expected result:
----------------
As with ./configure --disable-all

Tests failed    :    0 (  0.0%) (  0.0%)
Tests passed    :  326 ( 97.3%) (100.0%)




Actual result:
--------------
Tests failed    :    1 (  0.3%) (  0.3%)
Tests passed    :  325 ( 97.0%) ( 99.7%)

FAILED TEST SUMMARY
---------------------------------------------------------------------
ReflectionGenerator basic test
[ext/reflection/tests/ReflectionGenerator_basic.phpt]

cat ext/reflection/tests/ReflectionGenerator_basic.diff
019+ object(Generator)#5 (0) {
019- object(Generator)#6 (0) {
021+ object(ReflectionMethod)#7 (2) {
021- object(ReflectionMethod)#8 (2) {
027+ *RECURSION*
028+ object(Generator)#3 (0) {
027- object(class@anonymous)#1 (0) {
029- object(Generator)#4 (0) {
030- }
034+ object(Generator)#3 (0) {
035- object(Generator)#4 (0) {
036+ object(ReflectionFunction)#6 (1) {
037- object(ReflectionFunction)#7 (1) {
041+ object(Generator)#4 (0) {
042- object(Generator)#5 (0) {
047+ object(Generator)#4 (0) {
048- object(Generator)#5 (0) {
049+ object(ReflectionFunction)#7 (1) {
050- object(ReflectionFunction)#8 (1) {



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2016-07-01 10:49 UTC] laruence@php.net
actually this is not reflection specific issue.


<?php

$gen = (new class() {
    function a() {
        yield "okey";
    }
})->a(1);
var_dump($gen->current());
 [2016-07-01 10:50 UTC] laruence@php.net
Automatic comment on behalf of laruence@gmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=d1dd474ff903c2b7f6839e0ccba3e08fd47a1649
Log: Fixed bug #72523 (dtrace issue with reflection (failed test))
 [2016-07-01 10:50 UTC] laruence@php.net
-Status: Open +Status: Closed
 [2016-07-01 11:21 UTC] remi@php.net
@laruence thanks a lot.
 [2016-07-06 05:47 UTC] davey@php.net
Automatic comment on behalf of laruence@gmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=d1dd474ff903c2b7f6839e0ccba3e08fd47a1649
Log: Fixed bug #72523 (dtrace issue with reflection (failed test))
 [2016-07-20 11:30 UTC] davey@php.net
Automatic comment on behalf of laruence@gmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=d1dd474ff903c2b7f6839e0ccba3e08fd47a1649
Log: Fixed bug #72523 (dtrace issue with reflection (failed test))
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 13:00:02 2026 UTC