Fixed bug #72523 (dtrace issue with reflection (failed test))